# mtfind

./: .gitignore  .project  CMakeLists.txt  Makefile  README.md  dabadee.txt  mingw_build_test.cmd  mtfind.cpp  mtfind.h  mtfind.sln  mtfind.vcxproj  mtfind.vcxproj.filters  noregex.cpp  regex.cpp  test.cmd  С++__v3.txt
cmake_build/: readme.txt
helpers/: generator.py  test.cmd
include/: compare_mask.hpp  mtfind.hpp  noregex.hpp  regex.hpp
make_build/: Makefile  readme.txt
release/: readme.txt
resources/: Ulysses.txt  dabadee.txt  example.txt  multiple.txt  task.txt  xyxyxyxy.txt
src/: CMakeLists.txt  compare_mask.cpp  mtfind.cpp  noregex.cpp  regex.cpp
tests/: mingw_build_test.cmd
x64/Debug/: mtfind.exe.recipe  mtfind.ilk  mtfind.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/mtfind.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mtfind.lastbuildstate
